# mcp-bsl-ls

./: .gitignore  README.md  RUN_TEST.md  pyproject.toml  requirements.txt  test_bsl.py  test_check_syntax.py  test_console_output.py  test_json_reporter.py  test_tools.py
src/mcp_bsl/: __init__.py  bsl_runner.py  config.py  server.py
src/mcp_bsl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
